--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            学习博客
+longtitle:        学习博客
+author:           H
+email:            1453098030@qq.com
 description: >
-  Build Jekyll site with the GitBook style.
+  面试知识点学习. 个人自用
 
 version:          1.0
 gitbook_version:  3.2.3
